--- a/session-8/index.html
+++ b/session-8/index.html
@@ -13,7 +13,7 @@
 
     <!-- Start of ADD EVENT LISTENER example -->
 
-    <!-- <button id="clickMe">Click here</button>
+     <!--<button id="clickMe">Click here</button>
     <p id="hovering">Hover over this Text !</p>
     <b id="effect"></b> -->
 
@@ -25,16 +25,16 @@
     
     <!-- Start of REMOVE EVENT LISTENER task -->
 
-    <!-- <div id="remove-handler">This div element has an onmousemove event handler that displays a random number every time you move your
+     <div id="remove-handler">This div element has an onmousemove event handler that displays a random number every time you move your
       mouse inside this bordered field.
       <p>Click the button to remove the DIV's event handler.</p>
       <button id="remove-handler-button">Try it</button>
     </div>
-    <p id="random-number"></p> -->
+    <p id="random-number"></p> 
 
     <!-- End of REMOVE EVENT LISTENER task -->
 
     <script type="module" src="js/index.js"></script>
-    <script type="text/javascript" src="index.js"></script>
+    
   </body>
 </html>
