fixes-to-random-color-gselector

--- a/session-9/index.html
+++ b/session-9/index.html
@@ -9,7 +9,7 @@
 <body>
     <div>
         <button class="random-color">random color</button>
-        <h1 class="name">random color selector</h1>
+        <h1 class="name">random color generator, click button to generate</h1>
     </div>
     
     <script type="text/javascript" src="random.js"></script>
